--- a/rider.html
+++ b/rider.html
@@ -2,16 +2,59 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Client</title>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.dev.js"></script>
+	<title>Rider</title>
+	<!-- Latest compiled and minified CSS & JS -->
+	<link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 <body>
-	<script>
-	  const socket = io('http://localhost:3000/riders');
-	  socket.emit('requestTrip', {
-	  	from: 'Bachkhoa',
-	  	to: 'Kinhte'
-	  });
-	</script>
+	<div class="container" style="margin-top: 10px">
+		<div class="row">
+			<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+				<div class="panel panel-primary" id="request-trip">
+					<div class="panel-heading">
+						<h3 class="panel-title">Request your trip</h3>
+					</div>
+					<div class="panel-body">
+						<form action="" method="POST" role="form">
+							<legend>Please enter information</legend>
+							<div class="form-group">
+								<label for="">From:</label>
+								<input type="text" class="form-control" id="location-from">
+							</div>
+							<div class="form-group">
+								<label for="">To:</label>
+								<input type="text" class="form-control" id="location-to">
+							</div>
+							<button type="button" class="btn btn-primary btn-request">Submit</button>
+						</form>
+					</div>
+				</div>
+				<div class="panel panel-primary" id="requesting-trip">
+					<div class="panel-heading">
+						<h3 class="panel-title">Your requesting trip</h3>
+					</div>
+					<div class="panel-body">
+						<ul class="list-group">
+							<li class="list-group-item" id="requesting-from-location"></li>
+							<li class="list-group-item" id="requesting-to-location"></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+				<div class="panel panel-primary">
+					<div class="panel-heading">
+						<h3 class="panel-title">Your driver</h3>
+					</div>
+					
+				</div>
+			</div>
+		</div>
+		
+	</div>
+	<script src="js/jquery-3.3.1.slim.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/socket.io.dev.js"></script>
+	<script src="js/rider.js"></script>
 </body>
 </html>
