Request and cancel trip

--- a/driver.html
+++ b/driver.html
@@ -5,11 +5,13 @@
 	<title>Driver</title>
 	<!-- Latest compiled and minified CSS & JS -->
 	<link rel="stylesheet" href="css/bootstrap.min.css" >
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<div class="container" style="margin-top: 10px">
-		<div class="row">
-			<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+		<div class="loader" style="margin: auto"></div>
+		<div class="row driver-main" style="display: none">
+			<div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
 				<div class="panel panel-primary">
 					<div class="panel-heading">
 						<h3 class="panel-title">Your picking trip</h3>
@@ -19,7 +21,9 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+		</div>
+		<div class="row driver-main" style="display: none">
+			<div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
 				<div class="panel panel-primary">
 					<div class="panel-heading">
 						<h3 class="panel-title">List requesting trip</h3>
